<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Trip Cost Calc</string>
    <string name="no_notes">No Notes Yet</string>
    <string name="at">Am</string>
    <string name="submit">legt vor</string>
    <string name="to">für</string>
    <string name="menu_insert">Add Note</string>
    <string name="menu_delete">Delete Note</string>
    <string name="date">Date:</string>
    <string name="submitter">Submitter:</string>
    <string name="amount">Amount:</string>
    <string name="receiver">Receiver:</string>
    <string name="purpose">Purpose</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>
    <string name="share">Share</string>
</resources>
