<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/date"/>
		<EditText android:id="@+id/date" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/submitter" />
		<EditText android:id="@+id/submitter" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/amount" />
		<EditText android:id="@+id/amount" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/purpose" />
		<EditText android:id="@+id/purpose" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<RelativeLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true">
			<TextView android:text="@string/receiver" />
			<EditText android:id="@+id/receiver"/>  		 
		</LinearLayout>
		<LinearLayout android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:layout_alignRight="@+id/receiver">
			<TextView android:text="@string/share" />
			<EditText android:id="@+id/share"/>  		 
		</LinearLayout>
		 <Button android:id="@+id/BtnPlus"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentRight="true"
        	android:layout_marginLeft="10dip"
        	android:text="+" />
	</RelativeLayout>
	
	<TableLayout android:id="@+id/AddReceiver"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	
	<Button android:id="@+id/BtnConfirm" 
	  android:text="@string/confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
</LinearLayout>