<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="10dp">
	<TabelRow>
	
	 	<TextView
            android:text="@string/date"
            android:padding="3dip" />
     	<TextView
            android:text="@string/submitter"
            android:padding="3dip" />
        <TextView
            android:text="@string/purpose"
            android:padding="3dip" />
        <TextView
            android:text="@string/receiver"
            android:padding="3dip" />
            
	</TabelRow>
	
	<TableRow>
        
        <TextView android:id="@+id/date" xmlns:android="http://schemas.android.com/apk/res/android"
    	    android:textSize="12sp"
    		android:padding="3dip"/>
		<TextView android:id="@+id/submitter" xmlns:android="http://schemas.android.com/apk/res/android"
    		android:textSize="12sp"
    		android:padding="3dip"/>
		<TextView android:id="@+id/purpose" xmlns:android="http://schemas.android.com/apk/res/android"
    		android:textSize="12sp"
    		android:padding="3dip"/>
		<TextView android:id="@+id/receivers" xmlns:android="http://schemas.android.com/apk/res/android"
    		android:textSize="12sp"
    		android:padding="3dip"/>
    		
    </TableRow>	
</TableLayout>